--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -541,3 +541,65 @@ margin-left: 10px;
 .first-last {
     text-align: center;
 }
+
+/* Pages */
+.homePage {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.HomeTopHalf {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100px;
+    margin-top: 90px;
+    border-bottom: 3px solid black;
+}
+.HomeTopLeft {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100px;
+    border-right: 3px solid black;
+}
+.HomeTopRight {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100px;
+}
+.HomeBottomHalf {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 780px;
+}
+.HomeLeftSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    height: 780px;
+    border-right: 3px solid black;
+}
+.HomeMiddleSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    height: 780px;
+
+}
+.HomeRightSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+    height: 780px;
+    border-left: 3px solid black;
+}
