--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -117,7 +117,7 @@
     background-color: transparent;
 }
 #ez {
-    max-width: 90px;
+    max-width: 130px;
 
 }
 #ez2 {
@@ -345,4 +345,94 @@
 }
 .swipeDetails:active .swipeSyn {
     display: none;
+}
+
+.meetingPage {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.MeetingTopHalf {
+    width: 100%;
+    margin-top: 90px;
+    height: 100px;
+}
+.MeetingBottomHalf {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: row;
+
+}
+.MeetingMiddleSection {
+    width: 60%;
+    height: 600px;
+
+}
+.MeetingLeftSection {
+    width: 20%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+
+}
+.MeetingRightSection {
+    width: 20%;
+    height: 600px;
+}
+.everything {
+    width: 100%;
+    height: 600px;
+    border: 2px solid black;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(231, 231, 231);
+}
+.small {
+    width: 100%;
+    height: 70px;
+    border-bottom: 2px solid black;
+}
+.friends {
+    width: 200px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    border-radius: 25px;
+    text-align: center;
+    background-color: rgb(231, 231, 231);
+}
+.friendList {
+    width: 100%;
+    height: 480px;
+    margin-top: 10px;
+    overflow-y: scroll;
+}
+.chat__messages {
+    height: 580px;
+    width: 100%;
+}
+.messageInputs {
+    height: 50px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid black;
+    background-color: white;
+    margin-left: 60px;
+    background-color: rgb(231, 231, 231);
+
+}
+.inputs {
+    width: 500px;
+    height: 30px;
+    background-color: white;
+    font-size: 20px;
+}
+.inputButton {
+    height: 30px;
+    margin-left: 10px;
 }
