--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -150,6 +150,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
 }
 .HomeTopHalf {
     display: flex;
@@ -161,6 +162,7 @@
     margin-left: 50px;
     margin-right: 50px;
     overflow-x: scroll;
+
 }
 .ownspot {
     height: 50px;
@@ -240,9 +242,12 @@
     transform: translate(-50%, -50%);
 }
 .moviePage {
-    width: 100%;
+    width: 100.9%;
+    height: 981px;
     display: flex;
     flex-direction: column;
+    margin-left: -10px;
+    background-color: rgb(102, 102, 102);
 }
 .MovieTopHalf {
     width: 100%;
@@ -252,7 +257,9 @@
     border-right: 2px solid black;
     margin-top: 90px;
 }
-
+.perma {
+    color: white;
+}
 .MovieTopLeft {
     width: 50%;
     height: 100px;
@@ -289,6 +296,20 @@
     object-fit: contain;
     width: 100%;
     max-height: 170px;
+    margin-right: 10px;
+    transition: transform 500ms;
+    cursor: pointer;
+    transform: scale(.9);
+    backface-visibility: hidden;
+
+}
+.row_posters2 {
+    display: flex;
+}
+.row_poster2 {
+    object-fit: contain;
+    width: 100%;
+    max-height: 120px;
     margin-right: 10px;
     transition: transform 500ms;
     cursor: pointer;
@@ -348,9 +369,12 @@
 }
 
 .meetingPage {
-    width: 100%;
+    width: 100.9%;
+    height: 981px;
     display: flex;
     flex-direction: column;
+    margin-left: -10px;
+    background-color: rgb(102, 102, 102);
 }
 .MeetingTopHalf {
     width: 100%;
@@ -408,9 +432,16 @@
     width: 100%;
     height: 480px;
     margin-top: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     overflow-y: scroll;
 }
-.chat__messages {
+.friendList > p {
+    width: 30px;
+    cursor: pointer;
+}
+.chatMessages {
     height: 580px;
     width: 100%;
 }
@@ -435,4 +466,78 @@
 .inputButton {
     height: 30px;
     margin-left: 10px;
+}
+.friendPage {
+    width: 100.9%;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    margin-left: -10px;
+
+}
+.FriendOrder {
+    margin-top: 90px;
+    height: 160px;
+    width: 100%;
+    border-bottom: 2px solid rgb(231, 231, 231);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.FriendOrder2 {
+    height: 200px;
+    width: 100%;
+    border-bottom: 2px solid rgb(231, 231, 231);
+
+}
+.friendName {
+    height: 130px;
+    width: 100px;
+    margin-left: 20px;
+
+
+}
+.ptag {
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+}
+.ptag22 {
+    font-size: 17px;
+
+}
+.MovieMatch {
+    height: 120px;
+    width: 1800px;
+    border: 2px solid black;
+    overflow-x: hidden;
+}
+.FriendOrder2 {
+    height: 150px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.friendName2 {
+    height: 130px;
+    width: 100px;
+    margin-left: 20px;
+}
+.ptag2 {
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+}
+.green {
+    color: green;
+    font-weight: bold;
+}
+.red {
+    color: red;
+    font-weight: bold;
+}
+.orange {
+    color: orange;
+    font-weight: bold;
 }
