--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,7 +5,7 @@
     height: 20px;
     display: flex;
     position: fixed;
-    background-color: #D64933;
+    background-color: white;
     z-index: 1;
     bottom: 0;
     right: 0;
@@ -17,80 +17,84 @@
 }
 .foot {
     text-decoration: none;
-    color: #EEE5E9;
+    color: #D64933;
 }
 .myName {
     text-decoration: none;
-    color: #EEE5E9;
+    color: #D64933;
     margin-left: 1500px;
     margin-right: 30px;
 }
 .zoned {
     text-decoration: none;
-    color: #EEE5E9;
+    color: #D64933;
     margin-right: 30px;
 }
 
 #nav {
-    width: 100%;
+    width: 10%;
     list-style-type: none;
     display: flex;
     padding: 0;
     height: 100px;
     background-color: transparent;
-    background-size: cover;
     margin: 0;
-    background-repeat: no-repeat;
-    align-items      : center;
+    align-items: center;
+}
+#nav2 {
+    width: 12%;
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    height: 100px;
+    background-color: transparent;
+    margin: 0;
+    align-items: center;
+    justify-content: flex-start;
+}
+#nav3 {
+    width: 3%;
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    height: 100px;
+    background-color: transparent;
+    margin: 0;
+    align-items: center;
+}
+#space2 {
+    width: 7%;
 }
 #nav A {
-    display        : block;
+    display: block;
     text-decoration: none;
-    margin-right   : 25px;
-    color          : #EEE5E9;
-    font-weight    : bold;
-    font-size      : 20px;
-    border-bottom: 4px solid #D64933;
+    color: #D64933;
+    font-weight: bold;
+    font-size: 20px;
+    border-bottom: 4px solid white;
 }
-.Log {
-    text-decoration: none;
-    color          : #EEE5E9;
-    font-weight    : bold;
-    font-size      : 16px;
-    height: 30px;
-
-}
-#nav A:hover {
-    border-bottom: 4px solid #2B303A;
+#nav #ez2 {
+    margin-right: 25px;
 }
 
-#nav button {
-    display         : block;
-    color           : #EEE5E9;
+#nav3 button {
+    display: block;
+    color: #EEE5E9;
     height: 30px;
     width: 30px;
-    border          : none;
-    margin          : 0;
-    padding         : 0;
-    text-decoration : none;
-    background-color: #D64933;
+    border: none;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
     background-image: url("./images/logout-icon-transparent-7.jpg");
     background-size: contain;
     background-repeat: no-repeat;
-    cursor          : pointer;
-    outline         : none;
+    cursor: pointer;
+    outline: none;
     padding-bottom: 35px;
 
 }
-.search {
-    display: flex;
-    width: 1000px;
-    margin-left: 350px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: transparent;
-}
+
 .liner {
     position: fixed;
     top: 0;
@@ -99,7 +103,9 @@
     width: 100%;
     z-index: 1;
     flex-direction: row;
-    background-color: #D64933;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
 
 }
 
@@ -108,11 +114,11 @@
     font-size: 35px;
     font-weight: bolder;
     font-family: Tahoma, sans-serif;
-    color: #EEE5E9;
-    margin-top: 30px;
+    text-align: center;
+    color: #D64933;
+
   }
 .link {
-    margin-left: 100px;
     text-decoration: none;
     background-color: transparent;
 }
@@ -122,27 +128,7 @@
 }
 #ez2 {
     width: 60px;
-    margin-left: 300px;
 
-}
-
-
-.hidden {
-    background-color: #D64933;
-    border: none;
-    outline: none;
-    color: #EEE5E9;
-
-}
-.hidden2 {
-    background-color: #D64933;
-    color: #EEE5E9;
-    border: 2px solid #EEE5E9;
-    text-align: center;
-}
-.hidden2::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #EEE5E9;
-    font-weight: bolder;
 }
 
 /* Pages */
