--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -5,7 +5,7 @@
     height: 20px;
     display: flex;
     position: fixed;
-    background-color: white;
+    background-color: #111;
     z-index: 1;
     bottom: 0;
     right: 0;
@@ -130,6 +130,10 @@
     width: 60px;
 
 }
+#ez5 {
+    width: 60px;
+    margin-left: 25px;
+}
 
 /* Pages */
 .homePage {
@@ -137,34 +141,30 @@
     flex-direction: column;
     width: 100%;
 
-}
-.HomeTopHalf {
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    width: 1800px;
-    height: 240px;
-    margin-top: 90px;
-    margin-left: 50px;
-    margin-right: 50px;
-    overflow-x: scroll;
 
 }
+
 .ownspot {
     height: 50px;
+
 }
 .perma {
-    position:fixed;
+    color: white;
+    font-size: 35px;
     z-index: 1;
+
 }
 
 .HomeBottomHalf {
     display: flex;
     flex-direction: row;
     position: fixed;
-    margin-top: 130px;
-    width: 100%;
-    height: 780px;
+    margin-top: 90px;
+    margin-left: -10px;
+    width: 100.1%;
+    height: 980px;
+    color: black;
+    background-color: #111;
 }
 .HomeLeftSection {
     display: flex;
@@ -242,56 +242,81 @@
     top: 90%;
     left: 40%;
 }
+.banner {
+    color: white;
+    object-fit: contain;
+    height: 450px;
+    width: 100%;
+}
+.bannerinner {
+    margin-left: 30px;
+    padding-top: 140px;
+}
+.bannerTitle {
+    font-size: 3rem;
+    font-weight: 800;
+    padding-bottom: 0.3rem;
+}
+.bannerSyn {
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    max-width: 360px;
+    height: 80px;
+}
+.bannerButt {
+    color: white;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 0.2vw;
+    margin-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: black;
+    cursor: pointer;
+}
 .moviePage {
     width: 100.9%;
-    height: 981px;
+    background-color: #111;
     display: flex;
     flex-direction: column;
     margin-left: -10px;
-    background-color: rgb(102, 102, 102);
+    height: 2000px
+
 }
 .MovieTopHalf {
-    width: 100%;
-    height: 100px;
+    min-width: 1600px;
+    height: 400px;
     display: flex;
-    flex-direction: row;
-    border-right: 2px solid black;
     margin-top: 90px;
 }
-.perma {
-    color: white;
-}
-.MovieTopLeft {
-    width: 50%;
-    height: 100px;
-    border-right: 2px solid black;
-}
-.MovieTopRight {
-    width: 50%;
-    height: 100px;
-    border-left: 2px solid black;
-}
-
 
 .MovieBottomHalf {
     width: 100%;
-    margin-top: 90px;
+    margin-top: 40px;
     display: flex;
     flex-direction: row;
 }
 
+
 .MovieLeftSection {
-    width: 10%;
-}
-.MovieRightSection {
-    width: 10%;
+    width: 1%;
 }
 .MovieMiddleSection {
-    width: 80%;
-    overflow-x: scroll;
+    width: 100%;
+    height: 820px;
+    max-height: 1500px;
+
 }
 .row_posters {
     display: flex;
+    overflow-x: scroll ;
+
+
 }
 .row_poster {
     object-fit: contain;
@@ -303,6 +328,9 @@
     transform: scale(.9);
     backface-visibility: hidden;
 
+}
+.row_posters::-webkit-scrollbar {
+    display: none;
 }
 .row_posters2 {
     display: flex;
