--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -261,7 +261,7 @@
     width: 45rem;
     line-height: 1.3;
     padding-top: 1rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     max-width: 360px;
     height: 80px;
 }
@@ -280,7 +280,7 @@
     cursor: pointer;
 }
 .moviePage {
-    width: 100.9%;
+    width: 101%;
     background-color: #111;
     display: flex;
     flex-direction: column;
@@ -403,27 +403,35 @@
 }
 
 .meetingPage {
-    width: 100%;
+    width: 101%;
     height: 981px;
+    margin-left: -10px;
     display: flex;
     flex-direction: column;
+    background-color: #111;
 
+}
+*::-webkit-scrollbar {
+    display: none;
 }
 .MeetingTopHalf {
     width: 100%;
     margin-top: 90px;
     height: 100px;
+    background-color: #111;
 }
 .MeetingBottomHalf {
     width: 100%;
     height: 600px;
     display: flex;
     flex-direction: row;
+    background-color: #111;
 
 }
 .MeetingMiddleSection {
     width: 60%;
     height: 600px;
+    background-color: #111;
 
 }
 .MeetingLeftSection {
@@ -480,25 +488,32 @@
 }
 .messageInputs {
     height: 50px;
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 2px solid black;
+    border-top: 1px solid black;
     background-color: white;
-    margin-left: 60px;
     background-color: rgb(231, 231, 231);
 
 }
 .inputs {
-    width: 500px;
-    height: 30px;
-    background-color: white;
+    width: 1000px;
+    height: 40px;
+    border: none;
+    outline: none;
+    background-color: rgb(231, 231, 231);
     font-size: 20px;
 }
 .inputButton {
-    height: 30px;
+    height: 40px;
     margin-left: 10px;
+    border: none;
+    color: white;
+    font-weight: 700;
+    font-size: 17px;
+    outline: none;
+    background-color: #D64933;
 }
 .friendPage {
     width: 100.9%;
