--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -483,8 +483,53 @@
     cursor: pointer;
 }
 .chatMessages {
+    flex: 1;
     height: 580px;
     width: 100%;
+    padding: 30px;
+    overflow: scroll;
+}
+.chatmessage {
+    position: relative;
+    font-size: 15px;
+    font-weight: 700;
+    padding: 10px;
+    border-radius: 10px;
+    width: fit-content;
+    background-color: rgb(163, 163, 163);
+    margin-bottom: 30px;
+}
+.chatreceive {
+    margin-left: 900px;
+    background-color: rgb(0, 133, 0);
+    color: white;
+}
+.chatname {
+    position: absolute;
+    top: -20px;
+    left: 0px;
+    font-size: x-small;
+}
+.time {
+    margin-left: 10px;
+    font-size: xx-small;
+}
+.chatheader {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 1px solid grey;
+}
+.headinfo {
+    flex: 1;
+    padding-left: 20px;
+}
+.headinfo > h3 {
+    margin-bottom: 3px;
+    font-weight: 500;
+}
+.headinfo > p {
+    color: gray;
 }
 .messageInputs {
     height: 50px;
@@ -588,4 +633,49 @@
 .orange {
     color: orange;
     font-weight: bold;
+}
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    flex: 0.35;
+}
+.sideChats {
+    height: 450px;
+    width: 100%;
+    overflow-y: scroll;
+}
+.sidechatmain {
+    display: flex;
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid grey;
+
+}
+.sidechatmain2 {
+    display: flex;
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid grey;
+
+}
+.avfont {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+.avfont2 {
+    font-size: 20px;
+    margin-right: 50px;
+    margin-top: 10px;
+}
+.topBar {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+.sideSearch {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    border-radius: 20px;
+    justify-content: center;
 }
