--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -86,6 +86,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    background-color: transparent;
     background-image: url("./images/logout-icon-transparent-7.jpg");
     background-size: contain;
     background-repeat: no-repeat;
@@ -334,17 +335,19 @@
 }
 .row_posters2 {
     display: flex;
+    overflow-x: scroll ;
 }
 .row_poster2 {
     object-fit: contain;
     width: 100%;
     max-height: 120px;
     margin-right: 10px;
-    transition: transform 500ms;
     cursor: pointer;
-    transform: scale(.9);
     backface-visibility: hidden;
-
+}
+.row2 {
+    margin-left: 300px;
+    margin-right: 150px;
 }
 .addButton {
     display: block;
@@ -377,11 +380,12 @@
 }
 .cardItself {
     position: relative;
-    min-width: 460px;
-    max-width: 460px;
+    min-width: 500px;
+    max-width: 500px;
     border-radius: 20px;
     padding: 20px;
     height: 700px;
+    background-color: black;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -507,7 +511,6 @@
 .chatname {
     position: absolute;
     top: -20px;
-    left: 0px;
     font-size: x-small;
 }
 .time {
@@ -523,12 +526,14 @@
 .headinfo {
     flex: 1;
     padding-left: 20px;
+    width: 150px;
+
 }
 .headinfo > h3 {
     margin-bottom: 3px;
     font-weight: 500;
 }
-.headinfo > p {
+.grey {
     color: gray;
 }
 .messageInputs {
@@ -678,4 +683,7 @@
     height: 50px;
     border-radius: 20px;
     justify-content: center;
+}
+.chatmovies {
+    width: 900px;
 }
